--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,29 @@
 <resources>
-    <string name="app_name">ft_hangouts</string>
+    <string name="app_name">FT Hangouts</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_title">FT Hangouts</string>
+    <string name="nav_header_subtitle">Contact Management</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_contacts">Contacts</string>
+    
+    <!-- Contact strings -->
+    <string name="add_contact">Add Contact</string>
+    <string name="edit_contact">Edit Contact</string>
+    <string name="delete_contact">Delete Contact</string>
+    <string name="save_contact">Save Contact</string>
+    <string name="update_contact">Update Contact</string>
+    <string name="contact_added">Contact added successfully</string>
+    <string name="contact_updated">Contact updated successfully</string>
+    <string name="contact_deleted">Contact deleted</string>
+    <string name="confirm_delete">Are you sure you want to delete this contact?</string>
+    <string name="name_required">Name is required</string>
+    <string name="invalid_phone">Invalid phone number format</string>
+    <string name="invalid_email">Invalid email format</string>
+    <string name="no_contacts">No contacts found. Add a new contact.</string>
 </resources>
